--- a/Html/activity/datingRank/index.html
+++ b/Html/activity/datingRank/index.html
@@ -22,6 +22,10 @@
     <div id="root"></div>
     <script
       type="text/javascript"
+      src="https://static.lkme.cc/linkedme.min.js"
+    ></script>
+    <script
+      type="text/javascript"
       src="https://cdn.bootcss.com/vConsole/3.3.4/vconsole.min.js"
     ></script>
     <script
@@ -32,7 +36,5 @@
       type="text/javascript"
       src="https://cdn.bootcdn.net/ajax/libs/axios/0.19.2/axios.min.js"
     ></script>
-    <script type="text/javascript" src="http://localhost/index.370b2bf95d840af2c8ab.js"></script>
-  <!-- <script type="text/javascript" src="js/index.370b2bf95d840af2c8ab.js"></script> -->
-</body>
+  <script type="text/javascript" src="http://localhost/index.523fd5fa4c38490aa901.js"></script></body>
 </html>
