--- a/Html/table.html
+++ b/Html/table.html
@@ -1,208 +1,213 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Document</title>
     <style>
-        body {
-            margin: 0;
-        }
+      body {
+        margin: 0;
+      }
 
-        table {
-            font-size: 12px;
-            color: #606266;
-            border-collapse: collapse;
-            text-align: center;
-            table-layout: fixed;
-        }
+      table {
+        font-size: 12px;
+        color: #606266;
+        border-collapse: collapse;
+        text-align: center;
+        table-layout: fixed;
+      }
 
-        th {
-            white-space: nowrap;
-            background-color: #f5f7fa;
-        }
+      th {
+        white-space: nowrap;
+        background-color: #f5f7fa;
+      }
 
-        tr,
-        th,
-        td {
-            height: 40px;
-            border: 1px solid #ebeef5;
-            text-align: center;
-        }
+      tr,
+      th,
+      td {
+        height: 40px;
+        border: 1px solid #ebeef5;
+        text-align: center;
+      }
     </style>
-</head>
+  </head>
 
-<body>
+  <body>
     <main>
-        <table style="width:100%;">
-            <thead>
-                <tr>
-                    <th></th>
-                    <th>周一</th>
-                    <th>周二</th>
-                    <th>周三</th>
-                    <th>周四</th>
-                    <th>周五</th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr>
-                    <td rowspan="3"></td>
-                    <td>登山</td>
-                    <td>时尽</td>
-                    <td>处闻</td>
-                    <td>决溪</td>
-                    <td>松火</td>
-                </tr>
-                <tr>
-                    <td>登山</td>
-                    <td>时尽</td>
-                    <td>处闻</td>
-                    <td>决溪</td>
-                    <td>松火</td>
-                </tr>
-                <tr>
-                    <td>登山</td>
-                    <td>时尽</td>
-                    <td>处闻</td>
-                    <td>决溪</td>
-                    <td>家火</td>
-                </tr>
-                <tr>
-                    <td rowspan="3"></td>
-                    <td>登山</td>
-                    <td>时尽</td>
-                    <td>处闻</td>
-                    <td>决溪</td>
-                    <td>松火</td>
-                </tr>
-                <tr>
-                    <td>登山</td>
-                    <td>时尽</td>
-                    <td>处闻</td>
-                    <td>决溪</td>
-                    <td>松火</td>
-                </tr>
-                <tr>
-                    <td>登山</td>
-                    <td>路行</td>
-                    <td>泉到</td>
-                    <td>决溪</td>
-                    <td>松火</td>
-                </tr>
-                <tr>
-                    <td rowspan="2"></td>
-                    <td>登山</td>
-                    <td>时尽</td>
-                    <td>处闻</td>
-                    <td>决溪</td>
-                    <td>松火</td>
-                </tr>
-                <tr>
-                    <td>登山</td>
-                    <td>路行</td>
-                    <td>泉处闻</td>
-                    <td>决溪</td>
-                    <td>松火</td>
-                </tr>
-            </tbody>
-        </table>
+      <table style="width: 100%;">
+        <thead>
+          <tr>
+            <th></th>
+            <th>周一</th>
+            <th>周二</th>
+            <th>周三</th>
+            <th>周四</th>
+            <th>周五</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td rowspan="3"></td>
+            <td>登山</td>
+            <td>时尽</td>
+            <td>处闻</td>
+            <td>决溪</td>
+            <td>松火</td>
+          </tr>
+          <tr>
+            <td>登山</td>
+            <td>时尽</td>
+            <td>处闻</td>
+            <td>决溪</td>
+            <td>松火</td>
+          </tr>
+          <tr>
+            <td>登山</td>
+            <td>时尽</td>
+            <td>处闻</td>
+            <td>决溪</td>
+            <td>家火</td>
+          </tr>
+          <tr>
+            <td rowspan="3"></td>
+            <td>登山</td>
+            <td>时尽</td>
+            <td>处闻</td>
+            <td>决溪</td>
+            <td>松火</td>
+          </tr>
+          <tr>
+            <td>登山</td>
+            <td>时尽</td>
+            <td>处闻</td>
+            <td>决溪</td>
+            <td>松火</td>
+          </tr>
+          <tr>
+            <td>登山</td>
+            <td>路行</td>
+            <td>泉到</td>
+            <td>决溪</td>
+            <td>松火</td>
+          </tr>
+          <tr>
+            <td rowspan="2"></td>
+            <td>登山</td>
+            <td>时尽</td>
+            <td>处闻</td>
+            <td>决溪</td>
+            <td>松火</td>
+          </tr>
+          <tr>
+            <td>登山</td>
+            <td>路行</td>
+            <td>泉处闻</td>
+            <td>决溪</td>
+            <td>松火</td>
+          </tr>
+        </tbody>
+      </table>
     </main>
-</body>
-<script>
+  </body>
+  <script>
     var Base64 = {
-        _keyStr: "ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz0123456789+/=",
-        encode: function (e) {
-            var t = "";
-            var n, r, i, s, o, u, a;
-            var f = 0;
-            e = Base64._utf8_encode(e);
-            while (f < e.length) {
-                n = e.charCodeAt(f++);
-                r = e.charCodeAt(f++);
-                i = e.charCodeAt(f++);
-                s = n >> 2;
-                o = (n & 3) << 4 | r >> 4;
-                u = (r & 15) << 2 | i >> 6;
-                a = i & 63;
-                if (isNaN(r)) {
-                    u = a = 64
-                } else if (isNaN(i)) {
-                    a = 64
-                }
-                t = t + this._keyStr.charAt(s) + this._keyStr.charAt(o) + this._keyStr.charAt(u) + this._keyStr
-                    .charAt(a)
-            }
-            return t
-        },
-        decode: function (e) {
-            var t = "";
-            var n, r, i;
-            var s, o, u, a;
-            var f = 0;
-            e = e.replace(/[^A-Za-z0-9+/=]/g, "");
-            while (f < e.length) {
-                s = this._keyStr.indexOf(e.charAt(f++));
-                o = this._keyStr.indexOf(e.charAt(f++));
-                u = this._keyStr.indexOf(e.charAt(f++));
-                a = this._keyStr.indexOf(e.charAt(f++));
-                n = s << 2 | o >> 4;
-                r = (o & 15) << 4 | u >> 2;
-                i = (u & 3) << 6 | a;
-                t = t + String.fromCharCode(n);
-                if (u != 64) {
-                    t = t + String.fromCharCode(r)
-                }
-                if (a != 64) {
-                    t = t + String.fromCharCode(i)
-                }
-            }
-            t = Base64._utf8_decode(t);
-            return t
-        },
-        _utf8_encode: function (e) {
-            e = e.replace(/rn/g, "n");
-            var t = "";
-            for (var n = 0; n < e.length; n++) {
-                var r = e.charCodeAt(n);
-                if (r < 128) {
-                    t += String.fromCharCode(r)
-                } else if (r > 127 && r < 2048) {
-                    t += String.fromCharCode(r >> 6 | 192);
-                    t += String.fromCharCode(r & 63 | 128)
-                } else {
-                    t += String.fromCharCode(r >> 12 | 224);
-                    t += String.fromCharCode(r >> 6 & 63 | 128);
-                    t += String.fromCharCode(r & 63 | 128)
-                }
-            }
-            return t
-        },
-        _utf8_decode: function (e) {
-            var t = "";
-            var n = 0;
-            var r = c1 = c2 = 0;
-            while (n < e.length) {
-                r = e.charCodeAt(n);
-                if (r < 128) {
-                    t += String.fromCharCode(r);
-                    n++
-                } else if (r > 191 && r < 224) {
-                    c2 = e.charCodeAt(n + 1);
-                    t += String.fromCharCode((r & 31) << 6 | c2 & 63);
-                    n += 2
-                } else {
-                    c2 = e.charCodeAt(n + 1);
-                    c3 = e.charCodeAt(n + 2);
-                    t += String.fromCharCode((r & 15) << 12 | (c2 & 63) << 6 | c3 & 63);
-                    n += 3
-                }
-            }
-            return t
+      _keyStr:
+        'ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz0123456789+/=',
+      encode: function (e) {
+        var t = '';
+        var n, r, i, s, o, u, a;
+        var f = 0;
+        e = Base64._utf8_encode(e);
+        while (f < e.length) {
+          n = e.charCodeAt(f++);
+          r = e.charCodeAt(f++);
+          i = e.charCodeAt(f++);
+          s = n >> 2;
+          o = ((n & 3) << 4) | (r >> 4);
+          u = ((r & 15) << 2) | (i >> 6);
+          a = i & 63;
+          if (isNaN(r)) {
+            u = a = 64;
+          } else if (isNaN(i)) {
+            a = 64;
+          }
+          t =
+            t +
+            this._keyStr.charAt(s) +
+            this._keyStr.charAt(o) +
+            this._keyStr.charAt(u) +
+            this._keyStr.charAt(a);
         }
-    }
-</script>
-
+        return t;
+      },
+      decode: function (e) {
+        var t = '';
+        var n, r, i;
+        var s, o, u, a;
+        var f = 0;
+        e = e.replace(/[^A-Za-z0-9+/=]/g, '');
+        while (f < e.length) {
+          s = this._keyStr.indexOf(e.charAt(f++));
+          o = this._keyStr.indexOf(e.charAt(f++));
+          u = this._keyStr.indexOf(e.charAt(f++));
+          a = this._keyStr.indexOf(e.charAt(f++));
+          n = (s << 2) | (o >> 4);
+          r = ((o & 15) << 4) | (u >> 2);
+          i = ((u & 3) << 6) | a;
+          t = t + String.fromCharCode(n);
+          if (u != 64) {
+            t = t + String.fromCharCode(r);
+          }
+          if (a != 64) {
+            t = t + String.fromCharCode(i);
+          }
+        }
+        t = Base64._utf8_decode(t);
+        return t;
+      },
+      _utf8_encode: function (e) {
+        e = e.replace(/rn/g, 'n');
+        var t = '';
+        for (var n = 0; n < e.length; n++) {
+          var r = e.charCodeAt(n);
+          if (r < 128) {
+            t += String.fromCharCode(r);
+          } else if (r > 127 && r < 2048) {
+            t += String.fromCharCode((r >> 6) | 192);
+            t += String.fromCharCode((r & 63) | 128);
+          } else {
+            t += String.fromCharCode((r >> 12) | 224);
+            t += String.fromCharCode(((r >> 6) & 63) | 128);
+            t += String.fromCharCode((r & 63) | 128);
+          }
+        }
+        return t;
+      },
+      _utf8_decode: function (e) {
+        var t = '';
+        var n = 0;
+        var r = (c1 = c2 = 0);
+        while (n < e.length) {
+          r = e.charCodeAt(n);
+          if (r < 128) {
+            t += String.fromCharCode(r);
+            n++;
+          } else if (r > 191 && r < 224) {
+            c2 = e.charCodeAt(n + 1);
+            t += String.fromCharCode(((r & 31) << 6) | (c2 & 63));
+            n += 2;
+          } else {
+            c2 = e.charCodeAt(n + 1);
+            c3 = e.charCodeAt(n + 2);
+            t += String.fromCharCode(
+              ((r & 15) << 12) | ((c2 & 63) << 6) | (c3 & 63)
+            );
+            n += 3;
+          }
+        }
+        return t;
+      },
+    };
+  </script>
 </html>
