--- a/Html/form/form-and-formData.html
+++ b/Html/form/form-and-formData.html
@@ -71,7 +71,7 @@
             ></textarea>
           </div>
           <div class="form-item">
-            <input type="file" name="userImg" />
+            <input type="file" name="userImg" accept="audio/*,video/*,image/*" />
           </div>
           <div class="form-item">
             <button type="submit">提交</button>
