--- a/Html/form/form-and-formData.html
+++ b/Html/form/form-and-formData.html
@@ -74,6 +74,9 @@
             <input type="file" name="userImg" accept="audio/*,video/*,image/*" />
           </div>
           <div class="form-item">
+            <input type="date" value="2020-08-19">
+          </div>
+          <div class="form-item">
             <button type="submit">提交</button>
           </div>
         </form>
