--- a/Canvas/drawImage.html
+++ b/Canvas/drawImage.html
@@ -5,6 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <style>
+      * {
+        box-sizing: border-box;
+      }
+      body {
+        margin: 0;
+      }
       canvas {
         border: 1px solid #f2f2f2;
       }
