--- a/Html/form/form-and-formData.html
+++ b/Html/form/form-and-formData.html
@@ -4,17 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>FormData</title>
-    <style>
-      input:invalid {
-        border-color: red;
-      }
-      input:valid {
-        border-color: green;
-      }
-      input {
-        border-color: #333;
-      }
-    </style>
+    <link rel="stylesheet" href="./style.css">
   </head>
   <body>
     <div class="page">
@@ -31,9 +21,11 @@
               type="text"
               name="userName"
               id=""
+              class="input"
               required
               placeholder="userName"
               value="Jack"
+              autocomplete="name"
             />
           </div>
           <div class="form-item">
@@ -42,9 +34,11 @@
               type="text"
               name="userAcc"
               id=""
+              class="input"
               required
               placeholder="userAcc"
               value="lc15011977647@163.com"
+              autocomplete="acc"
             />
           </div>
           <div class="form-item">
@@ -60,10 +54,6 @@
             />
           </div>
           <div class="form-item">
-            <!-- 数值必须在1到10之间 -->
-            <input type="number" min="1" max="10" name="userNumber" required />
-          </div>
-          <div class="form-item">
             <textarea
               name="userDesc"
               placeholder="userDesc..."
@@ -71,10 +61,67 @@
             ></textarea>
           </div>
           <div class="form-item">
-            <input type="file" name="userImg" accept="audio/*,video/*,image/*" />
+            <input
+              type="file"
+              name="userImg"
+              accept="audio/*,video/*,image/*"
+            />
           </div>
+          <p>
+            用于输入网址。其开头必须是有效的 URI 架构，例如 http://、 ftp:// 或
+            mailto
+          </p>
           <div class="form-item">
-            <input type="date" value="2020-08-19">
+            <input type="url" />
+          </div>
+          <p>
+            用于输入电话号码。它不
+            执行特定的验证语法，因此，如果要确保特定的格式，可以使用模式属性
+          </p>
+          <div class="form-item">
+            <input type="tel" />
+          </div>
+          <p>
+            用于输入电子邮件地址，并提示键盘上应默认显示 @。
+            如果需要用户提供多个电子邮件地址，则可以添加 multiple 属性
+          </p>
+          <div class="form-item">
+            <input type="email" />
+          </div>
+          <p>一个文本输入字段，其样式与平台的搜索字段一致</p>
+          <div class="form-item">
+            <input type="search" />
+          </div>
+          <p>用于数字输入，可以是任意合理的整数或浮点值</p>
+          <div class="form-item">
+            <input type="number" min="1" max="10" name="userNumber" required />
+          </div>
+          <p>
+            用于数字输入，但与 number 输入类型不同，其值没那么重要。
+            它以滑块控件的形式显示给用户
+          </p>
+          <div class="form-item">
+            <input type="range" />
+          </div>
+          <p>用于输入日期和时间值，提供的时区为本地时区</p>
+          <div class="form-item">
+            <input type="datetime-local" />
+          </div>
+          <p>用于只输入日期，不提供时区</p>
+          <div class="form-item">
+            <input type="date" value="2020-08-19" />
+          </div>
+          <p>用于只输入时间，不提供时区</p>
+          <div class="form-item">
+            <input type="time" />
+          </div>
+          <p>用于只输入星期，不提供时区</p>
+          <div class="form-item">
+            <input type="week" />
+          </div>
+          <p>用于只输入月份，不提供时区</p>
+          <div class="form-item">
+            <input type="month" />
           </div>
           <div class="form-item">
             <button type="submit">提交</button>
