--- a/web_components/app-drawer/app-drawer.html
+++ b/web_components/app-drawer/app-drawer.html
@@ -4,6 +4,13 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <script type="module" src="./index.js"></script>
   </head>
-  <body></body>
+  <body>
+    <div class="page">
+      <div class="page-bd">
+        <app-drawer open></app-drawer>
+      </div>
+    </div>
+  </body>
 </html>
