--- a/vue/V2/2018-03-25.html
+++ b/vue/V2/2018-03-25.html
@@ -1,29 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Document</title>
-</head>
-<body>
+  </head>
+  <body>
     <div id="app">
-        <my :here="message"></my>
+      <my :here="message"></my>
     </div>
-</body>
-<script src="vue.js"></script>
-<script>
+  </body>
+  <script src="vue.js"></script>
+  <script>
     const vm = new Vue({
-        el: '#app',
-        data: {
-            message: 'Lin Chang'
+      el: '#app',
+      data: {
+        message: 'Lin Chang',
+      },
+      components: {
+        my: {
+          template: '<h2>{{ here }}</h2>',
+          props: ['here'],
         },
-        components: {
-            "my": {
-                template:'<h2>{{ here }}</h2>',
-                props: ['here']
-            }
-        }
-    })
-</script>
+      },
+    });
+  </script>
 </html>
