--- a/vue/V2/router/active-links/index.html
+++ b/vue/V2/router/active-links/index.html
@@ -1,105 +1,111 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Document</title>
-</head>
+  </head>
 
-<body>
+  <body>
     <div id="app">
-        <h1>Active Links</h1>
-        <ul>
-            <li>
-                <router-link to="/">/</router-link>
-            </li>
-            <li>
-                <router-link to="/" exact>/ (exact match)</router-link>
-            </li>
-            <li>
-                <router-link to="/users">/users</router-link>
-            </li>
-            <li>
-                <router-link to="/users" exact>/users (exact match)</router-link>
-            </li>
-            <li>
-                <router-link to="/users/evan">/users/evan</router-link>
-            </li>
-            <li>
-                <router-link to="/users/evan#foo">/users/evan#foo</router-link>
-            </li>
-            <li>
-                <router-link :to="{ path: '/users/evan', query: { foo: 'bar' }}">
-                    /users/evan?foo=bar
-                </router-link>
-            </li>
-            <li>
-                <!-- #635 -->
-                <router-link :to="{ name: 'user', params: { username: 'evan' }, query: { foo: 'bar' }}" exact>
-                    /users/evan?foo=bar (named view + exact match)
-                </router-link>
-            </li>
-            <li>
-                <router-link :to="{ path: '/users/evan', query: { foo: 'bar', baz: 'qux' }}">
-                    /users/evan?foo=bar&baz=qux
-                </router-link>
-            </li>
-            <li>
-                <router-link to="/about">/about</router-link>
-            </li>
-            <router-link tag="li" to="/about">
-                <a>/about (active class on outer element)</a>
-            </router-link>
-        </ul>
-        <router-view class="view 1993"></router-view>
+      <h1>Active Links</h1>
+      <ul>
+        <li>
+          <router-link to="/">/</router-link>
+        </li>
+        <li>
+          <router-link to="/" exact>/ (exact match)</router-link>
+        </li>
+        <li>
+          <router-link to="/users">/users</router-link>
+        </li>
+        <li>
+          <router-link to="/users" exact>/users (exact match)</router-link>
+        </li>
+        <li>
+          <router-link to="/users/evan">/users/evan</router-link>
+        </li>
+        <li>
+          <router-link to="/users/evan#foo">/users/evan#foo</router-link>
+        </li>
+        <li>
+          <router-link :to="{ path: '/users/evan', query: { foo: 'bar' }}">
+            /users/evan?foo=bar
+          </router-link>
+        </li>
+        <li>
+          <!-- #635 -->
+          <router-link
+            :to="{ name: 'user', params: { username: 'evan' }, query: { foo: 'bar' }}"
+            exact
+          >
+            /users/evan?foo=bar (named view + exact match)
+          </router-link>
+        </li>
+        <li>
+          <router-link
+            :to="{ path: '/users/evan', query: { foo: 'bar', baz: 'qux' }}"
+          >
+            /users/evan?foo=bar&baz=qux
+          </router-link>
+        </li>
+        <li>
+          <router-link to="/about">/about</router-link>
+        </li>
+        <router-link tag="li" to="/about">
+          <a>/about (active class on outer element)</a>
+        </router-link>
+      </ul>
+      <router-view class="view 1993"></router-view>
     </div>
-</body>
-<script src="../../vue.js"></script>
-<script src="https://unpkg.com/vue-router/dist/vue-router.js"></script>
-<script>
+  </body>
+  <script src="../../vue.js"></script>
+  <script src="https://unpkg.com/vue-router/dist/vue-router.js"></script>
+  <script>
     const Home = {
-        template: '<div><h2>Home</h2></div>'
-    }
+      template: '<div><h2>Home</h2></div>',
+    };
     const About = {
-        template: '<div><h2>About</h2></div>'
-    }
+      template: '<div><h2>About</h2></div>',
+    };
     const Users = {
-        template: `
+      template: `
         <div>
             <h2>Users</h2>
             <router-view></router-view>
         </div>            
-        `
-    }
+        `,
+    };
     const User = {
-        template: '<div>{{ $route.params.username }}</div>'
-    }
+      template: '<div>{{ $route.params.username }}</div>',
+    };
 
     const router = new VueRouter({
-        routes: [{
-                path: '/',
-                component: Home
-            },
+      routes: [
+        {
+          path: '/',
+          component: Home,
+        },
+        {
+          path: '/about',
+          component: About,
+        },
+        {
+          path: '/users',
+          component: Users,
+          children: [
             {
-                path: '/about',
-                component: About
+              path: ':username',
+              name: 'user',
+              component: User,
             },
-            {
-                path: '/users',
-                component: Users,
-                children: [{
-                    path: ':username',
-                    name: 'user',
-                    component: User
-                }]
-            }
-        ]
-    })
+          ],
+        },
+      ],
+    });
     const vm = new Vue({
-        router
+      router,
     }).$mount('#app');
-</script>
-
+  </script>
 </html>
