--- a/Canvas/index.html
+++ b/Canvas/index.html
@@ -18,12 +18,12 @@
     </div>
   </body>
   <script type="text/javascript">
-    let tutorial = document.getElementById("tutorial");
+    let tutorial = document.getElementById('tutorial');
     console.log(tutorial);
-    let ctx = tutorial.getContext("2d");
-    ctx.fillStyle = "#f00";
+    let ctx = tutorial.getContext('2d');
+    ctx.fillStyle = '#f00';
     ctx.fillRect(10, 10, 55, 50);
-    ctx.fillStyle = "rgba(0, 0, 200, 0.5)";
+    ctx.fillStyle = 'rgba(0, 0, 200, 0.5)';
     ctx.fillRect(30, 30, 55, 50);
   </script>
 </html>
