--- a/Canvas/绘制多条折线.html
+++ b/Canvas/绘制多条折线.html
@@ -26,7 +26,7 @@
     context.closePath();
 
     context.lineWidth = 5;
-    context.strokeStyle = "red";
+    context.strokeStyle = 'red';
     context.stroke();
 
     context.beginPath();
@@ -34,7 +34,7 @@
     context.lineTo(500, 300);
     context.lineTo(300, 500);
     context.lineWidth = 5;
-    context.strokeStyle = "blue";
+    context.strokeStyle = 'blue';
     context.stroke();
 
     context.beginPath();
@@ -42,8 +42,7 @@
     context.lineTo(700, 300);
     context.lineTo(500, 500);
     context.lineWidth = 5;
-    context.strokeStyle = "black";
+    context.strokeStyle = 'black';
     context.stroke();
-
   </script>
 </html>
