--- a/Svg/icon.html
+++ b/Svg/icon.html
@@ -5,22 +5,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <style>
-        a {
-            color: #aaa;
-            line-height: 1;
-            font-size: 100%;
-        }
-        .fill-current {
-    fill: currentColor;
-}
+      a {
+        color: #aaa;
+        line-height: 1;
+        font-size: 100%;
+      }
+      .fill-current {
+        fill: currentColor;
+      }
     </style>
   </head>
   <body>
     <div class="page">
       <div class="page-bd">
-          <!-- 爱心icon -->
-          <a href="#">
-            <svg
+        <!-- 爱心icon -->
+        <a href="#">
+          <svg
             xmlns="http://www.w3.org/2000/svg"
             width="20"
             height="20"
@@ -32,8 +32,14 @@
             <path
               d="M8.75 0.5H5.25C2.35025 0.5 0 2.85025 0 5.75C0 8.24783 1.74592 10.3344 4.08333 10.8652V14.5L8.16667 11H8.75C11.6497 11 14 8.64975 14 5.75C14 2.85025 11.6497 0.5 8.75 0.5Z"
             ></path>
-          </a>
-        </svg>
+          </svg>
+          <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 200 200">
+            <path d="M 200 100 L 150 0 L 0 0 L 50 100 L 0 200 L 150 200 L 200 100"></path>
+          </svg>
+          <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 200 200">
+            <path d="M 200 0 L 200 200 L 0 200 L 0 100 L 200 0 Z"></path>
+          </svg>          
+        </a>
       </div>
     </div>
   </body>
