--- a/Canvas/绘制三角形边框.html
+++ b/Canvas/绘制三角形边框.html
@@ -20,9 +20,9 @@
   </body>
   <script>
     function draw() {
-      let canvas = document.getElementById("tutorial");
+      let canvas = document.getElementById('tutorial');
       if (canvas.getContext) {
-        let ctx = canvas.getContext("2d");
+        let ctx = canvas.getContext('2d');
         ctx.beginPath();
         ctx.moveTo(50, 50);
         ctx.lineTo(50, 100);
