:tada: update file

--- a/frontend/webpack/src/index.html
+++ b/frontend/webpack/src/index.html
@@ -2,19 +2,35 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1.0,minimum-scale=1.0,user-scalable=no"
-    />
+    <meta name="viewport" content="viewport-fit=cover, width=device-width, initial-scale=1.0, user-scalable=no, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <meta name="keywords" content="" />
     <meta name="description" content="" />
     <!-- 禁止百度转码 -->
     <meta http-equiv="Cache-Control" content="no-siteapp" />
     <meta name="renderer" content="webkit" />
+    <meta name="format-detection" content="telphone=no, email=no" />
+    <!-- uc强制竖屏 -->
+    <meta name="screen-orientation" content="portrait" />
+    <!-- QQ强制竖屏 -->
+    <meta name="x5-orientation" content="portrait" />
+    <meta name="full-screen" content="yes" />
+    <meta name="x5-fullscreen" content="true" />
+    <meta name="browsermode" content="application" />
+    <meta name="x5-page-mode" content="app" />
+    <meta name="msapplication-tap-highlight" content="no" />
+    <meta name="apple-mobile-web-app-capable" content="no" />
     <title>Document</title>
   </head>
   <body>
-    <div class="">这是一个页面</div>
+    <div id="app">
+      <section class="flex"><img src="./assets/img-1.png" alt="" /></section>
+      <section><img src="./assets/img-2.png" alt="" /></section>
+      <section><img src="./assets/img-3.png" alt="" /></section>
+      <section><img src="./assets/img-4.png" alt="" /></section>
+      <div class="box"></div>
+    </div>
+    <script src="//res2.wx.qq.com/open/js/jweixin-1.6.0.js"></script>
+    <script src='//static.lkme.cc/linkedme.min.js'></script>  
   </body>
 </html>
