--- a/frontend/html/bdatu/index.html
+++ b/frontend/html/bdatu/index.html
@@ -40,8 +40,8 @@
   </body>
   <script>
     window.onload = function () {
-      let apiUrl = "http://localhost:8038/jiekou/mains/p1.html";
-      let list = document.querySelector(".list");
+      const apiUrl = "http://localhost:8038/jiekou/mains/p1.html";
+      const list = document.querySelector(".list");
 
       // 发起一个请求
       fetch(apiUrl, {
