--- a/frontend/html/button.html
+++ b/frontend/html/button.html
@@ -57,8 +57,8 @@
   <script>
     window.onload = function () {
       if (/iP(hone|d)/.test(navigator.userAgent)) {
-        let elements = document.querySelectorAll('button');
-        let emptyFunction = function () {};
+        const elements = document.querySelectorAll('button');
+        const emptyFunction = function () {};
         for (let i = 0; i < elements.length; i++) {
           elements[i].addEventListener('touchstart', emptyFunction, false);
         }
