--- a/frontend/html/list.html
+++ b/frontend/html/list.html
@@ -18,8 +18,8 @@
   </body>
   <script>
     window.onload = function () {
-      let list = document.querySelector('.list');
-      let childElem = Array.from(list.children); // 从一个类似数组或可迭代对象创建一个新的，浅拷贝的数组实例
+      const list = document.querySelector('.list');
+      const childElem = Array.from(list.children); // 从一个类似数组或可迭代对象创建一个新的，浅拷贝的数组实例
       function handle(i) {
         return function () {
           alert(i);
