--- a/frontend/html/1px.html
+++ b/frontend/html/1px.html
@@ -16,7 +16,7 @@
         height: 100px;
         background-color: #fff;
       }
-      .box::before {
+      .px-bottom::before {
         content: " ";
         box-sizing: border-box;
         pointer-events: none;
@@ -31,7 +31,7 @@
   </head>
   <body>
     <main id="main">
-      <div class="box"></div>
+      <div class="box px-bottom"></div>
       <div class="box"></div>
       <div class="box"></div>
     </main>
